MMT-1040: Visibility set default to hidden to avoid clipping

--- a/app/assets/stylesheets/layout/_header.scss
+++ b/app/assets/stylesheets/layout/_header.scss
@@ -173,6 +173,7 @@ header {
   margin-top: 25px;
   position: absolute;
   margin-left: -7px;
+  visibility: hidden;
 
   a {
     &:hover {
